--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
           <circle cx="32" cy="36" r="12" fill="none" stroke="#D4AF37" stroke-width="3"/>
           <text x="27" y="41" font-size="10" fill="#D4AF37">$</text>
         </svg>
-        <h3>All Suppliers Bundle</h3>
+        <h3> LIMITED - All Suppliers Bundle</h3>
         <button class="buy" data-product="all">Buy Now</button>
+        <p class="price">A$20</p>
       </div></div>
 
       <!-- Accessories -->
@@ -55,6 +56,7 @@
           <line x1="16" y1="36" x2="48" y2="36" stroke="#D4AF37" stroke-width="3"/>
         </svg>
         <h3>Accessories Vendor</h3>
+        <p class="price">A$3</p>
         <button class="buy" data-product="accessories">Buy Now</button>
       </div></div>
 
@@ -67,6 +69,7 @@
           <circle cx="42" cy="42" r="4" stroke="#D4AF37" stroke-width="3" fill="none"/>
         </svg>
         <h3>Airbud Vendor</h3>
+        <p class="price">A$10</p>
         <button class="buy" data-product="airbud">Buy Now</button>
       </div></div>
 
@@ -78,6 +81,7 @@
           <line x1="32" y1="10" x2="32" y2="14" stroke="#D4AF37" stroke-width="3"/>
         </svg>
         <h3>Cologne Vendor</h3>
+        <p class="price">A$3</p>
         <button class="buy" data-product="cologne">Buy Now</button>
       </div></div>
 
@@ -87,6 +91,7 @@
           <path d="M24 16l8 4 8-4 8 8-6 6v18H22V30l-6-6 8-8z" stroke="#D4AF37" stroke-width="3" fill="none" stroke-linejoin="round"/>
         </svg>
         <h3>Designer Clothing Vendor</h3>
+        <p class="price">A$10</p>
         <button class="buy" data-product="clothing">Buy Now</button>
       </div></div>
 
@@ -98,6 +103,7 @@
         </svg>
         <h3>Designer Shoe Vendor</h3>
         <button class="buy" data-product="shoe">Buy Now</button>
+        <p class="price">A$10</p>
       </div></div>
 
       <!-- Moissanite Watch -->
@@ -111,6 +117,7 @@
         </svg>
         <h3>Moissanite Watch Vendor</h3>
         <button class="buy" data-product="watch">Buy Now</button>
+        <p class="price">A$15</p>
       </div></div>
     </section>
 
@@ -168,3 +175,4 @@
 <script src="script.js"></script>
 
 </html>
+
