--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <circle cx="32" cy="36" r="12" fill="none" stroke="#D4AF37" stroke-width="3"/>
           <text x="27" y="41" font-size="10" fill="#D4AF37">$</text>
         </svg>
-        <h3> LIMITED - All Suppliers Bundle</h3>
+        <h3> LIMITED - All Suppliers Bundle - $20</h3>
         <button class="buy" data-product="all">Buy Now</button>
         <p class="price">A$20</p>
       </div></div>
@@ -55,7 +55,7 @@
           <line x1="16" y1="28" x2="48" y2="28" stroke="#D4AF37" stroke-width="3"/>
           <line x1="16" y1="36" x2="48" y2="36" stroke="#D4AF37" stroke-width="3"/>
         </svg>
-        <h3>Accessories Vendor</h3>
+        <h3>Accessories Vendor - $3</h3>
         <p class="price">A$3</p>
         <button class="buy" data-product="accessories">Buy Now</button>
       </div></div>
@@ -68,7 +68,7 @@
           <path d="M42 18c6 0 8 5 8 10s-2 10-8 10" stroke="#D4AF37" stroke-width="3" fill="none"/>
           <circle cx="42" cy="42" r="4" stroke="#D4AF37" stroke-width="3" fill="none"/>
         </svg>
-        <h3>Airbud Vendor</h3>
+        <h3>Airbud Vendor - $10</h3>
         <p class="price">A$10</p>
         <button class="buy" data-product="airbud">Buy Now</button>
       </div></div>
@@ -80,7 +80,7 @@
           <rect x="26" y="14" width="12" height="8" rx="2" stroke="#D4AF37" stroke-width="3" fill="none"/>
           <line x1="32" y1="10" x2="32" y2="14" stroke="#D4AF37" stroke-width="3"/>
         </svg>
-        <h3>Cologne Vendor</h3>
+        <h3>Cologne Vendor - $3</h3>
         <p class="price">A$3</p>
         <button class="buy" data-product="cologne">Buy Now</button>
       </div></div>
@@ -90,7 +90,7 @@
         <svg viewBox="0 0 64 64" class="icon">
           <path d="M24 16l8 4 8-4 8 8-6 6v18H22V30l-6-6 8-8z" stroke="#D4AF37" stroke-width="3" fill="none" stroke-linejoin="round"/>
         </svg>
-        <h3>Designer Clothing Vendor</h3>
+        <h3>Designer Clothing Vendor - $10</h3>
         <p class="price">A$10</p>
         <button class="buy" data-product="clothing">Buy Now</button>
       </div></div>
@@ -101,7 +101,7 @@
           <path d="M10 40h44l-2 6H12l-2-6z" stroke="#D4AF37" stroke-width="3" fill="none"/>
           <path d="M14 34c8 0 10 6 20 6 6 0 14-2 16-6" stroke="#D4AF37" stroke-width="3" fill="none"/>
         </svg>
-        <h3>Designer Shoe Vendor</h3>
+        <h3>Designer Shoe Vendor - $10</h3>
         <button class="buy" data-product="shoe">Buy Now</button>
         <p class="price">A$10</p>
       </div></div>
@@ -115,7 +115,7 @@
           <rect x="28" y="10" width="8" height="8" rx="2" stroke="#D4AF37" stroke-width="3" fill="none"/>
           <rect x="28" y="46" width="8" height="8" rx="2" stroke="#D4AF37" stroke-width="3" fill="none"/>
         </svg>
-        <h3>Moissanite Watch Vendor</h3>
+        <h3>Moissanite Watch Vendor - $15</h3>
         <button class="buy" data-product="watch">Buy Now</button>
         <p class="price">A$15</p>
       </div></div>
@@ -175,4 +175,5 @@
 <script src="script.js"></script>
 
 </html>
+
 
